--- a/Winery/Content/home-index-styles.css
+++ b/Winery/Content/home-index-styles.css
@@ -38,9 +38,10 @@
     width: 200px;
     height: 50px;
     border: 0;
-    border-radius: 5px;
+    border-radius: 0px;
     transition: 0.3s ease;
     font-family: 'Cormorant Upright';
+
 }
     .shop-now-button:hover {
         background-color: #535446;
